--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  http: ^1.1.2
+  fluttertoast: ^8.2.4
+  dio: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
